# fcitx5-qt

qt5/platforminputcontext/: CMakeLists.txt
